# IPKN

./: CMakeLists.txt  Doxyfile.in
docs/: Doxyfile.in
include/shared/: Hello.h  MemoryBuilder.hpp
include/shared/MMan/: Includes.hpp
include/shared/MMan/Creational/: Includes.hpp
include/shared/MMan/Creational/Patterns/: Includes.hpp  JeepBuilder.cc  NissanBuilder.cc
include/shared/MMan/Creational/Patterns/Builder/: Builder.hpp  Director.cc  Includes.hpp
include/shared/MMan/Creational/Patterns/Builder/headers/: Includes.hpp  head.hpp
include/shared/MMan/Creational/Patterns/Builder/headers/struct/: Car.cc
src/: CMakeLists.txt  Hello.cpp  MMan.cc  main.cpp
